--- a/style.css
+++ b/style.css
@@ -62,3 +62,24 @@ footer {
     margin: 20px;
 
 }
+
+@media screen and (max-width: 768px) {
+    header {
+        padding: 10px;
+    }
+
+    h1 {
+        font-size: 28px;
+    }
+
+    nav li {
+        display: block;
+        margin: 10px 0;
+    }
+
+    h2, p {
+        margin: 20px;
+        font-size: 16px;
+    }
+
+}
