--- a/style.css
+++ b/style.css
@@ -106,23 +106,51 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-    header {
-        padding: 10px;
+    .cabecalho {
+        padding: 10px 0;
+
     }
+    .container .navegacao {
+        width: 100%;
+         line-height: 1.5;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        padding: 50px 0;
+    }
+   
+    }
+
+    .logo {
+        font-size: 1.2rem;
+        padding: 20px;
+        width: 100%;
+        z-index: 2;
+        text-align: center;
+    }
+
+    .menu {
+        display: flex;
+        gap: 10px;
+        padding: 20px 0;
+    }
+.menu a{
+        color: #333;
+        text-decoration: none;
+        font-size: 16px;
+        padding: 10px 15px; 
+        border-radius: 5px;
+        transition: background-color 0.3s ease;      
+        
+    }
+
+    
 
     h1 {
         font-size: 28px;
     }
 
-    nav li {
-        display: block;
-        margin: 10px 0;
-    }
-
-    h2,
     p {
-        margin: 20px;
         font-size: 16px;
     }
 
-}
